--- a/index.html
+++ b/index.html
@@ -3,33 +3,63 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./assets/style.css">
   <title>Frontend Mentor | Profile card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  Victor Crest
-  26
-  London
-
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
-  <div class="attribution">
+  <div class="container">  
+    <div class="card">
+      <div class="card-header">
+      </div>
+      <div class="card-body">
+        <div class="image-wrapper">
+        <img src="assets/images/image-victor.jpg" alt="victor">
+        </div>
+        <div class="content">
+          <h1>Victor Crest <span>26</span></h1>
+          <h2>London</h2>
+        </div>
+        <div class="card-footer">
+          <div class="element">
+            <div class="accent">
+              80K
+            </div>
+            <div class="subtitle">
+              Followers
+            </div>
+          </div>
+          <div class="element">
+            <div class="accent">
+              803K
+            </div>
+            <div class="subtitle">
+              Likes
+            </div>
+          </div>
+          <div class="element">
+            <div class="accent">
+              1.4K
+            </div>
+            <div class="subtitle">
+              Photos
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- <div class="bg-container">
+    <div class="upper-left-sgv">
+      <img src="./assets/images/bg-pattern-top.svg" alt="">
+    </div>
+    <div class="bottom-right-sgv">
+      <img src="./assets/images/bg-pattern-bottom.svg" alt="">
+    </div>
+  </div> -->
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
